--- a/betteruksivt-react/public/index.html
+++ b/betteruksivt-react/public/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="ru" class="[--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem]">
+<html
+  lang="ru"
+  class="[--scroll-mt:9.875rem] lg:[--scroll-mt:6.3125rem] h-full"
+>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="BetterUksvit"
-      content="BetterUksvit"
-    />
+    <meta name="BetterUksvit" content="BetterUksvit" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>BetterUksvit</title>
   </head>
-  <body class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
+  <body
+    class="antialiased h-full transition-all ease-linear text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <noscript
+      >Для работы этого приложения необходимо включить JavaScript.</noscript
+    >
+    <div id="root" class="overflow-hidden"></div>
   </body>
 </html>
